# palavo

./: CMakeLists.txt  LICENSE  README.md  binary_info_access.c  binary_info_access.h  config.h  dvi64_graphics.c  dvi64_graphics.h  flash.sh  font_rom_brl4.h  glcdfont.c  globals.c  globals.h  hsync.pio  hsync2.pio  hsync3.pio  hsync4.pio  hsync5.pio  hsync_vsync.pio  make-and-flash.sh  make-and-load.sh  make-assets.sh  nec_ir_rx.pio  palavo.c  pio-fill_dvi-buffer.pio  readme.md  reset.sh  rgb.pio  rgb2.pio  rgb3.pio  rgb4.pio  rgb5.pio  vga16_graphics.c  vga16_graphics.h  vga2_graphics.c  vga2_graphics.h  vga_capture.pio  vga_graphics_demo.c  vsync.pio  vsync2.pio
assets/: vga_graphics_primitives_demo_on_pico.uf2  vga_graphics_primitives_demo_on_pico2.uf2
boards/: pico2_with_picowbell_hstx.h  pimoroni_pico_lipo2xl_w_rp2350.h
utils/: compress-rgb.py  expand-convert-and-display.sh  expand-pss.py  make-and-flash.sh  make-and-load.sh  make-assets.sh  trim-svg.py
